--- a/neuro_nuggets/UI-UX/homepage.html
+++ b/neuro_nuggets/UI-UX/homepage.html
@@ -3,40 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap Example</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <title>Neuro Nuggets</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <link href="homepage.css" rel="stylesheet">
+  
 </head>
 <body>
 
     <div class="container-fluid">
         <!-- Icon in the top-left corner -->
-        <div class="row icon">
-            <div class="col">
-                <h1>user</h1>
+        <div class="row ">
+            <div class="col-2 user-icon">
+                <img src="/UI-UX/images/usericon.png" alt="usericon">
             </div>
-            <div class="col-7 text-center logo">
-                <h1>logo</h1>
+        <!-- Game logo -->    
+            <div class="col-8 game-logo">
+                <img src="/UI-UX/images/gamelogo.png" alt="gamelogo">
             </div>
-            <div class="col">            
+            <div class="col-2">            
             </div>  
         </div>
     
-
-        <div class="row justify-content-center btn-container">
-            <div class="col-md-4 buttons">
-                <button type="button" class="btn btn-primary btn-block singlebtn">Single</button>
-                <button type="button" class="btn btn-primary btn-block endlessbtn">Endless</button>
-                <button type="button" class="btn btn-primary btn-block multiplayerbtn">Multiplayer</button>
-                <button type="button" class="btn btn-primary btn-block settingsbtn">Settings</button>
+        <!-- Buttons -->    
+        <div class="row btn-container">
+            <div class="col-5 buttons">
+                <div class="row justify-content-center"><img src="/UI-UX/images/singlebutton.png" alt="singlemode" id="singlebutton"></div>
+                <div class="row justify-content-center"><img src="/UI-UX/images/endlessbutton.png" alt="endlessmode" id="endlessbutton"></div>
+                <div class="row justify-content-center"><img src="/UI-UX/images/multiplayerbutton.png" alt="mutiplayermode" id="multiplayerbutton"></div>
+                <div class="row justify-content-center"><img src="/UI-UX/images/settingsbutton.png" alt="settings" id="settingsbutton"></div>    
             </div>
         </div>
     </div>
         
-    <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+   
+
 </body>
 </html>
