--- a/neuro_nuggets/UI-UX/homepage.html
+++ b/neuro_nuggets/UI-UX/homepage.html
@@ -14,22 +14,22 @@
     <div class="container-fluid">
         <!-- Icon in the top-left corner -->
         <div class="row ">
-            <div class="col-2 user-icon">
-                <img src="/UI-UX/images/usericon.png" alt="usericon">
+            <div class="col user-icon-container">
+                <img src="/UI-UX/images/usericon.png" alt="usericon" class="user-icon">
             </div>
         <!-- Game logo -->    
-            <div class="col-8 game-logo">
+            <div class="col game-logo">
                 <img src="/UI-UX/images/gamelogo.png" alt="gamelogo">
             </div>
-            <div class="col-2">            
+            <div class="col">            
             </div>  
         </div>
     
         <!-- Buttons -->    
         <div class="row btn-container">
-            <div class="col-5 buttons">
-                <div class="row justify-content-center"><img src="/UI-UX/images/singlebutton.png" alt="singlemode" id="singlebutton"></div>
-                <div class="row justify-content-center"><img src="/UI-UX/images/endlessbutton.png" alt="endlessmode" id="endlessbutton"></div>
+            <div class="col-2 buttons-div">
+                <div class="row justify-content-center"><img src="/UI-UX/images/singlebutton.png" alt="singlemode" class="button" id="singlebutton"></div>
+                <div class="row justify-content-center"><img src="/UI-UX/images/endlessbutton.png" alt="endlessmode" class="button" id="endlessbutton"></div>
                 <div class="row justify-content-center"><img src="/UI-UX/images/multiplayerbutton.png" alt="mutiplayermode" id="multiplayerbutton"></div>
                 <div class="row justify-content-center"><img src="/UI-UX/images/settingsbutton.png" alt="settings" id="settingsbutton"></div>    
             </div>
