--- a/neuro_nuggets/UI-UX/homepage.html
+++ b/neuro_nuggets/UI-UX/homepage.html
@@ -15,11 +15,11 @@
         <!-- Icon in the top-left corner -->
         <div class="row ">
             <div class="col-2 user-icon">
-                <img src="/UI-UX/images/usericon.png" alt="usericon">
+                <img src="./images/usericon.png" alt="usericon">
             </div>
         <!-- Game logo -->    
             <div class="col-8 game-logo">
-                <img src="/UI-UX/images/gamelogo.png" alt="gamelogo">
+                <img src="./images/gamelogo.png" alt="gamelogo">
             </div>
             <div class="col-2">            
             </div>  
@@ -28,10 +28,10 @@
         <!-- Buttons -->    
         <div class="row btn-container">
             <div class="col-5 buttons">
-                <div class="row justify-content-center"><img src="/UI-UX/images/singlebutton.png" alt="singlemode" id="singlebutton"></div>
-                <div class="row justify-content-center"><img src="/UI-UX/images/endlessbutton.png" alt="endlessmode" id="endlessbutton"></div>
-                <div class="row justify-content-center"><img src="/UI-UX/images/multiplayerbutton.png" alt="mutiplayermode" id="multiplayerbutton"></div>
-                <div class="row justify-content-center"><img src="/UI-UX/images/settingsbutton.png" alt="settings" id="settingsbutton"></div>    
+                <div class="row justify-content-center"><img src="./images/singlebutton.png" alt="singlemode" id="singlebutton"></div>
+                <div class="row justify-content-center"><img src="./images/endlessbutton.png" alt="endlessmode" id="endlessbutton"></div>
+                <div class="row justify-content-center"><img src="./images/multiplayerbutton.png" alt="mutiplayermode" id="multiplayerbutton"></div>
+                <div class="row justify-content-center"><img src="./images/settingsbutton.png" alt="settings" id="settingsbutton"></div>    
             </div>
         </div>
     </div>
